# lint-hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.rst  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: lint.yml
ivy_lint/: __init__.py  __main__.py  strings.py
ivy_lint/formatters/: __init__.py  base_docstring.py  base_formatter.py  class_ordering.py  docs_formatter.py  function_ordering.py  ivy_array.py
