[tool.poetry]
name = "lint-hook"
version = "1.0.0"
description = "Linting checker and formatter for ivy coding and docstring styles"
authors = ["Ivy Team <ivydl.team@gmail.com>"]
license = "Apache 2.0"
readme = "README.rst"
homepage = "https://github.com/unifyai/lint-hook"
repository = "https://github.com/unifyai/lint-hook"
packages = [{include = "ivy_lint"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
ivy-lint = "ivy_lint.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
